fix: 修复 mac 安装版项目目录识别与管理台启动失败
- 修复打包后 repoRoot 误判为 / 导致 /apps/web_admin 不存在的问题

- 新增桌面端“选择项目目录”能力并持久化 repoRoot

- web_admin 托管增加内置资源兜底（extraResources）

- 优化错误提示与启动流程，补充客户文档与发布说明

--- a/apps/desktop/renderer/index.html
+++ b/apps/desktop/renderer/index.html
@@ -72,6 +72,13 @@
           </div>
           <form id="settingsForm" class="grid-form">
             <label>
+              LiveTalking 项目目录
+              <input id="settingRepoRoot" placeholder="/Users/xxx/LiveTalking" readonly />
+            </label>
+            <div class="inline-actions">
+              <button type="button" id="btnPickRepoRoot" class="btn ghost">选择项目目录</button>
+            </div>
+            <label>
               运行模式
               <select id="settingRuntimeMode">
                 <option value="local">本机模式（托管 control_api）</option>
