fix: 修复桌面布局重叠并增加版本可见性

--- a/apps/desktop/renderer/index.html
+++ b/apps/desktop/renderer/index.html
@@ -50,6 +50,7 @@
       <div><strong>Web Admin:</strong> <span id="webMeta">-</span></div>
       <div><strong>Python:</strong> <span id="pythonMeta">-</span></div>
       <div><strong>Repo:</strong> <span id="repoMeta">-</span></div>
+      <div><strong>Desktop:</strong> <span id="desktopMeta">-</span></div>
     </section>
 
     <main class="main-grid">
